
14/10/2005	frmb	added a couple more transputer instructions (occam-pi specific)
14/10/2005	frmb	changed parser for formal parameters, should pick up type-attributes correctly now
13/10/2005	frmb	initial support for inline transputer assembler
11/10/2005	frmb	modified grammar slightly for CHAN TYPE parsing
10/10/2005	frmb	read/write library support, more XML-keys
09/10/2005	frmb	more library support
09/10/2005	frmb	fixed up back-end transform
09/10/2005	frmb	initial support for library building
07/10/2005	frmb	more support for FUNCTION instances, few more MOBILE bits
07/10/2005	frmb	added occampi_indented_process_trailing() for VALOF/RESULT type nodes
06/10/2005	frmb	added deferred target capability to the parser (bit ugly..)
06/10/2005	frmb	initial support for FUNCTIONs, skeleton for MOBILEs
05/10/2005	frmb	some improved handling for ARRAY nodes
03/10/2005	frmb	initial parser handling for ARRAY nodes
03/10/2005	frmb	updated option processing, should handle in-line options successfully for occam-pi
02/10/2005	frmb	IFs half-finished (should code-gen ok for simple cases)
01/10/2005	frmb	various updates to lexer and parser
01/10/2005	frmb	support for short IFs, initial parsing for IF, ALT, etc.
28/09/2005	frmb	fixed up VAL abbreviation initialisation
25/09/2005	frmb	added compiler hook for alloc extra-vars, abbreviations maybe functional
24/09/2005	frmb	some work on abbreviations and value parameters
24/09/2005	frmb	first round of support for INITIAL declarations
18/09/2005	frmb	more work on the usage-checker
18/09/2005	frmb	various minor updates
17/09/2005	frmb	initial support for monadic operators (just "-" and "~" so far)
17/09/2005	frmb	kroc-etc target now tracks stack depths
16/09/2005	frmb	more support for dyadic operators (sorta work, ish :))
16/09/2005	frmb	improved result back-end node handling
15/09/2005	frmb	added back-end-map parse to the mapper
13/09/2005	frmb	added "result" node-type to back-end
12/09/2005	frmb	initial expression/dyadic handling