@@ -154,11 +154,11 @@ static const struct TAG_cmd_option wordlist[] =
     {(char*)0,'\0',NULL,NULL,NULL,-1},
     {"stop-codegen",		'\0',	opt_setstopflag,	(void *)15,			"1stop after code-generation",				28},
     {(char*)0,'\0',NULL,NULL,NULL,-1},
-    {"help",			'h',	opt_do_help,		NULL,				"0display standard usage information",			0},
+    {"help",			'h',	opt_do_help_flag,	NULL,				"0display standard usage information",			0},
     {"skip-aliascheck",	'\0',	opt_clearintflag,	&(compopts.doaliascheck),	"1skip alias checks",					29},
     {(char*)0,'\0',NULL,NULL,NULL,-1},
     {"dump-targets",		'\0',	opt_setintflag,		&(compopts.dumptargets),	"1print supported targets after initialisation",	9},
-    {"help-ful",		'\0',	opt_do_help,		NULL,				"1display full usage information",			1},
+    {"help-ful",		'\0',	opt_do_help_flag,	NULL,				"1display full usage information",			1},
     {(char*)0,'\0',NULL,NULL,NULL,-1},
     {"stop-usagecheck",	'\0',	opt_setstopflag,	(void *)8,			"1stop after parallel-usage check",			21},
     {(char*)0,'\0',NULL,NULL,NULL,-1},
